--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>COOL Generator</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>The background is steelblue</h1>
 </body>
 </html>
